[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/menu/icons/active_local_icon.png" type="Texture" id=2]
[ext_resource path="res://scripts/menu/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://scenes/menu/SlinkyButton.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/menu/icons/active_online_icon.png" type="Texture" id=16]
[ext_resource path="res://assets/menu/icons/active_training_icon.png" type="Texture" id=17]
[ext_resource path="res://assets/menu/icons/active_records_icon.png" type="Texture" id=22]
[ext_resource path="res://assets/menu/images/background.jpeg" type="Texture" id=24]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0, 0, 0, 0.392157, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="MenuBackground" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MainBackground" type="TextureRect" parent="MenuBackground"]
self_modulate = Color( 0.694118, 0.694118, 0.694118, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 24 )
expand = true
stretch_mode = 1

[node name="MainPane" type="Control" parent="."]
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AccentGradient" type="TextureRect" parent="MainPane"]
show_behind_parent = true
anchor_right = 0.09
anchor_bottom = 1.0
texture = SubResource( 2 )
expand = true
stretch_mode = 1

[node name="MenuButtons" type="Control" parent="MainPane"]
anchor_left = 0.05
anchor_top = 0.12
anchor_right = 0.05
anchor_bottom = 0.63

[node name="OnlineButton" parent="MainPane/MenuButtons" instance=ExtResource( 13 )]
margin_right = 400.0
margin_bottom = 80.0
is_active = true
collapse_width = 400
base_width = 400
expanded_width = 420
slide_offset = 20
icon_texture = ExtResource( 16 )
button_text = "ONLINE"

[node name="LocalButton" parent="MainPane/MenuButtons" instance=ExtResource( 13 )]
margin_top = 84.0
margin_right = 400.0
margin_bottom = 164.0
is_active = true
collapse_width = 400
base_width = 400
expanded_width = 420
slide_offset = 20
icon_texture = ExtResource( 2 )
button_text = "LOCAL"

[node name="TrainingButton" parent="MainPane/MenuButtons" instance=ExtResource( 13 )]
margin_top = 168.0
margin_right = 400.0
margin_bottom = 248.0
is_active = true
collapse_width = 400
base_width = 400
expanded_width = 420
slide_offset = 20
icon_texture = ExtResource( 17 )
button_text = "TRAINING"

[node name="RecordsButton" parent="MainPane/MenuButtons" instance=ExtResource( 13 )]
margin_top = 252.0
margin_right = 400.0
margin_bottom = 332.0
is_active = true
collapse_width = 400
base_width = 400
expanded_width = 420
slide_offset = 20
icon_texture = ExtResource( 22 )
button_text = "RECORDS"

[node name="LocalTab" type="VBoxContainer" parent="MainPane"]
visible = false
anchor_left = 0.095
anchor_top = 0.26
anchor_right = 0.395
anchor_bottom = 0.44
custom_constants/separation = 0

[node name="VersusButton" type="Button" parent="MainPane/LocalTab"]
margin_right = 384.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainPane/LocalTab/VersusButton"]
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
text = "VERSUS"
valign = 1

[node name="PlaceholderButton" type="Button" parent="MainPane/LocalTab"]
margin_top = 58.0
margin_right = 384.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainPane/LocalTab/PlaceholderButton"]
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
text = "PLACEHOLDER"
valign = 1

[node name="TrainingTab" type="VBoxContainer" parent="MainPane"]
visible = false
anchor_left = 0.095
anchor_top = 0.4
anchor_right = 0.395
anchor_bottom = 0.58
custom_constants/separation = 0

[node name="PracticeButton" type="Button" parent="MainPane/TrainingTab"]
margin_right = 255.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainPane/TrainingTab/PracticeButton"]
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
text = "PRACTICE"
valign = 1

[node name="TutorialButton" type="Button" parent="MainPane/TrainingTab"]
margin_top = 43.0
margin_right = 255.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainPane/TrainingTab/TutorialButton"]
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
text = "TUTORIAL"
valign = 1

[node name="RecordsTab" type="VBoxContainer" parent="MainPane"]
visible = false
anchor_left = 0.095
anchor_top = 0.54
anchor_right = 0.395
anchor_bottom = 0.9
custom_constants/separation = 0

[node name="GameplayButton" type="Button" parent="MainPane/RecordsTab"]
margin_right = 255.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainPane/RecordsTab/GameplayButton"]
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
text = "GAMEPLAY"
valign = 1

[node name="CollectionButton" type="Button" parent="MainPane/RecordsTab"]
margin_top = 43.0
margin_right = 255.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainPane/RecordsTab/CollectionButton"]
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
text = "COLLECTION"
valign = 1

[node name="GalleryButton" type="Button" parent="MainPane/RecordsTab"]
margin_top = 86.0
margin_right = 255.0
margin_bottom = 129.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainPane/RecordsTab/GalleryButton"]
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
text = "GALLERY"
valign = 1

[node name="FishingButton" type="Button" parent="MainPane/RecordsTab"]
margin_top = 129.0
margin_right = 255.0
margin_bottom = 172.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainPane/RecordsTab/FishingButton"]
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
text = "FISHING"
valign = 1
